# api_drone_management

./: Cargo.toml  docker-compose.yaml
migrations/: 20250311194244_drones.up.sql
src/lib/: application.rs  domain.rs  env.rs
src/lib/application/: app.rs  authentication.rs  drone.rs  errors.rs  http.rs  http_server.rs  responses.rs
src/lib/application/authentication/: layer.rs  middlewares.rs
src/lib/application/authentication/handlers/: verify_token.rs
src/lib/application/drone/: drone_controller.rs  handlers.rs  router.rs
src/lib/application/drone/handlers/: delete_drone.rs  delete_drones.rs  fetch_drones.rs  get_drone.rs  store_drone.rs  store_drones.rs  update_drone.rs  update_drones.rs
src/lib/application/http/: errors.rs  http_server.rs  responses.rs
src/lib/domain/: services.rs
src/lib/domain/contracts/: drone.rs
src/lib/domain/entities/: http_error.rs
src/lib/domain/models/: drone.rs
src/lib/domain/services/: drone_service.rs
src/lib/infrastructure/: repositories.rs
src/lib/infrastructure/db/: postgres.rs
src/lib/infrastructure/repositories/: drone_repository.rs
