[package]
name = "api_drone_management"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "drone-server"

[lib]
path = "src/lib/lib.rs"
name = "drone"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["macros", "postgres", "runtime-tokio", "runtime-tokio-native-tls", "time", "uuid"] }
tokio = { version = "1.44.0", features = ["full"] }
