[package]
name = "api_drone_management"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "drone-server"

[lib]
path = "src/lib/lib.rs"
name = "drone"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header", "typed-routing"] }
clap = { version = "4.5.32", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["macros", "postgres", "runtime-tokio", "runtime-tokio-native-tls", "time", "uuid"] }
tokio = { version = "1.44.0", features = ["full"] }
futures = "0.3.31"
futures-util = "0.3.31"
tower = "0.5.2"
reqwest = { version = "0.12.15", features = ["json"] }
